# summary_pdf_langchain

./: .gitignore  README.md  main.py  pyproject.toml  sum.py  tasks.py  worker.py
backend-go/: go.mod  go.sum  main.go
frontend-next/: package.json
frontend-next/src/app/: layout.tsx  page.tsx
hasil_summary/: artikel_bunga.txt  laporan_cuaca.txt  response_1764666553082.json  response_1764666553092.json  response_artikel-bunga-gambar_upload-pdf.json  response_artikel-kucing_url.json
pdf/: artikel_kucing_url.txt  artikel_pohon_gambar_url.txt  response_1764645803330.json  response_1764647997663.json
